v1/docs/ModelsWorkflowProcessedCertificateRequest.md
# ModelsWorkflowProcessedCertificateRequest

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**CARowId** | Pointer to **int32** |  | [optional] [readonly] 
**CARequestId** | Pointer to **string** |  | [optional] 
**CAHost** | Pointer to **string** |  | [optional] 
**CALogicalName** | Pointer to **string** |  | [optional] 
**KeyfactorRequestId** | Pointer to **int32** |  | [optional] 
**Comment** | Pointer to **string** |  | [optional] 

## Methods

### NewModelsWorkflowProcessedCertificateRequest

`func NewModelsWorkflowProcessedCertificateRequest() *ModelsWorkflowProcessedCertificateRequest`

NewModelsWorkflowProcessedCertificateRequest instantiates a new ModelsWorkflowProcessedCertificateRequest object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsWorkflowProcessedCertificateRequestWithDefaults

`func NewModelsWorkflowProcessedCertificateRequestWithDefaults() *ModelsWorkflowProcessedCertificateRequest`

NewModelsWorkflowProcessedCertificateRequestWithDefaults instantiates a new ModelsWorkflowProcessedCertificateRequest object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetCARowId

`func (o *ModelsWorkflowProcessedCertificateRequest) GetCARowId() int32`

GetCARowId returns the CARowId field if non-nil, zero value otherwise.

### GetCARowIdOk

`func (o *ModelsWorkflowProcessedCertificateRequest) GetCARowIdOk() (*int32, bool)`

GetCARowIdOk returns a tuple with the CARowId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCARowId

`func (o *ModelsWorkflowProcessedCertificateRequest) SetCARowId(v int32)`

SetCARowId sets CARowId field to given value.

### HasCARowId

`func (o *ModelsWorkflowProcessedCertificateRequest) HasCARowId() bool`

HasCARowId returns a boolean if a field has been set.

### GetCARequestId

`func (o *ModelsWorkflowProcessedCertificateRequest) GetCARequestId() string`

GetCARequestId returns the CARequestId field if non-nil, zero value otherwise.

### GetCARequestIdOk

`func (o *ModelsWorkflowProcessedCertificateRequest) GetCARequestIdOk() (*string, bool)`

GetCARequestIdOk returns a tuple with the CARequestId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCARequestId

`func (o *ModelsWorkflowProcessedCertificateRequest) SetCARequestId(v string)`

SetCARequestId sets CARequestId field to given value.

### HasCARequestId

`func (o *ModelsWorkflowProcessedCertificateRequest) HasCARequestId() bool`

HasCARequestId returns a boolean if a field has been set.

### GetCAHost

`func (o *ModelsWorkflowProcessedCertificateRequest) GetCAHost() string`

GetCAHost returns the CAHost field if non-nil, zero value otherwise.

### GetCAHostOk

`func (o *ModelsWorkflowProcessedCertificateRequest) GetCAHostOk() (*string, bool)`

GetCAHostOk returns a tuple with the CAHost field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCAHost

`func (o *ModelsWorkflowProcessedCertificateRequest) SetCAHost(v string)`

SetCAHost sets CAHost field to given value.

### HasCAHost

`func (o *ModelsWorkflowProcessedCertificateRequest) HasCAHost() bool`

HasCAHost returns a boolean if a field has been set.

### GetCALogicalName

`func (o *ModelsWorkflowProcessedCertificateRequest) GetCALogicalName() string`

GetCALogicalName returns the CALogicalName field if non-nil, zero value otherwise.

### GetCALogicalNameOk

`func (o *ModelsWorkflowProcessedCertificateRequest) GetCALogicalNameOk() (*string, bool)`

GetCALogicalNameOk returns a tuple with the CALogicalName field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCALogicalName

`func (o *ModelsWorkflowProcessedCertificateRequest) SetCALogicalName(v string)`

SetCALogicalName sets CALogicalName field to given value.

### HasCALogicalName

`func (o *ModelsWorkflowProcessedCertificateRequest) HasCALogicalName() bool`

HasCALogicalName returns a boolean if a field has been set.

### GetKeyfactorRequestId

`func (o *ModelsWorkflowProcessedCertificateRequest) GetKeyfactorRequestId() int32`

GetKeyfactorRequestId returns the KeyfactorRequestId field if non-nil, zero value otherwise.

### GetKeyfactorRequestIdOk

`func (o *ModelsWorkflowProcessedCertificateRequest) GetKeyfactorRequestIdOk() (*int32, bool)`

GetKeyfactorRequestIdOk returns a tuple with the KeyfactorRequestId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetKeyfactorRequestId

`func (o *ModelsWorkflowProcessedCertificateRequest) SetKeyfactorRequestId(v int32)`

SetKeyfactorRequestId sets KeyfactorRequestId field to given value.

### HasKeyfactorRequestId

`func (o *ModelsWorkflowProcessedCertificateRequest) HasKeyfactorRequestId() bool`

HasKeyfactorRequestId returns a boolean if a field has been set.

### GetComment

`func (o *ModelsWorkflowProcessedCertificateRequest) GetComment() string`

GetComment returns the Comment field if non-nil, zero value otherwise.

### GetCommentOk

`func (o *ModelsWorkflowProcessedCertificateRequest) GetCommentOk() (*string, bool)`

GetCommentOk returns a tuple with the Comment field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetComment

`func (o *ModelsWorkflowProcessedCertificateRequest) SetComment(v string)`

SetComment sets Comment field to given value.

### HasComment

`func (o *ModelsWorkflowProcessedCertificateRequest) HasComment() bool`

HasComment returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


